// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Radio /> should render correctly 1`] = `
<div
  className="form-group form-fields"
  id="reply-1"
>
  <HelpBlock
    bsClass="help-block"
  >
    Plusieurs choix sont possibles
  </HelpBlock>
  <div
    className="choice-field mb-15"
    key="choice-20"
  >
    <ForwardRef
      disabled={false}
      id="reply-1_choice-20"
      image={null}
      name="choices-for-field-11"
      onBlur={[Function]}
      onChange={[Function]}
      radioChecked={false}
      type="radio"
      value="20"
    >
      Athlétisme
    </ForwardRef>
  </div>
  <div
    className="choice-field mb-15"
    key="choice-21"
  >
    <ForwardRef
      disabled={false}
      id="reply-1_choice-21"
      image={null}
      name="choices-for-field-11"
      onBlur={[Function]}
      onChange={[Function]}
      radioChecked={false}
      type="radio"
      value="21"
    >
      Natation
    </ForwardRef>
  </div>
  <div
    className="choice-field mb-15"
    key="choice-22"
  >
    <ForwardRef
      disabled={false}
      id="reply-1_choice-22"
      image={null}
      name="choices-for-field-11"
      onBlur={[Function]}
      onChange={[Function]}
      radioChecked={false}
      type="radio"
      value="Sports collectifs"
    >
      Sports collectifs
    </ForwardRef>
  </div>
  <div
    className="choice-field mb-15"
    key="choice-23"
  >
    <ForwardRef
      disabled={false}
      id="reply-1_choice-23"
      image={null}
      name="choices-for-field-11"
      onBlur={[Function]}
      onChange={[Function]}
      radioChecked={false}
      type="radio"
      value="Sports individuels"
    >
      Sports individuels
    </ForwardRef>
  </div>
</div>
`;

exports[`<Radio /> should render with an other field 1`] = `
<div
  className="form-group form-fields"
  id="reply-1"
>
  <HelpBlock
    bsClass="help-block"
  >
    Plusieurs choix sont possibles
  </HelpBlock>
  <div
    className="choice-field mb-15"
    key="choice-20"
  >
    <ForwardRef
      disabled={false}
      id="reply-1_choice-20"
      image={null}
      name="choices-for-field-11"
      onBlur={[Function]}
      onChange={[Function]}
      radioChecked={false}
      type="radio"
      value="20"
    >
      Athlétisme
    </ForwardRef>
  </div>
  <div
    className="choice-field mb-15"
    key="choice-21"
  >
    <ForwardRef
      disabled={false}
      id="reply-1_choice-21"
      image={null}
      name="choices-for-field-11"
      onBlur={[Function]}
      onChange={[Function]}
      radioChecked={false}
      type="radio"
      value="21"
    >
      Natation
    </ForwardRef>
  </div>
  <div
    className="choice-field mb-15"
    key="choice-22"
  >
    <ForwardRef
      disabled={false}
      id="reply-1_choice-22"
      image={null}
      name="choices-for-field-11"
      onBlur={[Function]}
      onChange={[Function]}
      radioChecked={false}
      type="radio"
      value="Sports collectifs"
    >
      Sports collectifs
    </ForwardRef>
  </div>
  <div
    className="choice-field mb-15"
    key="choice-23"
  >
    <ForwardRef
      disabled={false}
      id="reply-1_choice-23"
      image={null}
      name="choices-for-field-11"
      onBlur={[Function]}
      onChange={[Function]}
      radioChecked={false}
      type="radio"
      value="Sports individuels"
    >
      Sports individuels
    </ForwardRef>
  </div>
  <Other
    checked={false}
    disabled={false}
    field={
      Object {
        "choices": Array [
          Object {
            "id": "20",
            "label": "Athlétisme",
            "useIdAsValue": true,
          },
          Object {
            "id": "21",
            "label": "Natation",
            "useIdAsValue": true,
          },
          Object {
            "id": "22",
            "label": "Sports collectifs",
          },
          Object {
            "id": "23",
            "label": "Sports individuels",
          },
        ],
        "helpText": "Plusieurs choix sont possibles",
        "id": "11",
        "isOtherAllowed": true,
        "required": true,
        "slug": "pour-quel-type-d-epreuve-etes-vous-pret-a-acheter-des-places",
        "type": "checkbox",
      }
    }
    onChange={[Function]}
    value=""
  />
</div>
`;
